--- a/Data/MNIST/How To Import The MNIST Dataset Using Tensorflow.ipynb
+++ b/Data/MNIST/How To Import The MNIST Dataset Using Tensorflow.ipynb
@@ -116,10 +116,17 @@
    "source": [
     "## Connect With Mr Data Science:\n",
     "<a href=\"https://www.mrdatascience.com\">mrdatascience.com</a>,\n",
-    "<a href=\"https://gist.github.com/MrDataScience\">GitHub</a>,\n",
+    "<a href=\"https://github.com/MrDataScience\">GitHub</a>,\n",
     "<a href=\"https://medium.com/@mrdatascience\">Medium</a>,\n",
     "<a href=\"https://www.youtube.com/channel/UCHQeKhLl99Ho6EF0MNZozWQ?view_as=subscriber\">YouTube</a>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
